build_after_hud.txt
[  1%] Built target glad-generate-files
[  6%] Built target glad
[ 46%] Built target glfw
[ 60%] Built target raylib
[ 65%] Building CXX object CMakeFiles/blacknode.dir/src/net/ControlSender.cpp.o
[ 65%] Building CXX object CMakeFiles/blacknode.dir/src/net/UdpReceiver.cpp.o
[ 65%] Building CXX object CMakeFiles/blacknode.dir/src/Network/UdpReceiver.cpp.o
[ 68%] Building CXX object CMakeFiles/blacknode.dir/src/ui/HUD.cpp.o
[ 68%] Building CXX object CMakeFiles/blacknode.dir/src/render/GLRenderer.cpp.o
In file included from /home/pc/Avant-Garde/Avant-Garde-1/src/net/ControlSender.cpp:1:
/home/pc/Avant-Garde/Avant-Garde-1/src/net/ControlSender.h:8:41: error: ‘uint16_t’ has not been declared
    8 |     bool start(const std::string &host, uint16_t port);
      |                                         ^~~~~~~~
/home/pc/Avant-Garde/Avant-Garde-1/src/net/ControlSender.h:15:5: error: ‘uint16_t’ does not name a type
   15 |     uint16_t port=0;
      |     ^~~~~~~~
/home/pc/Avant-Garde/Avant-Garde-1/src/net/ControlSender.h:3:1: note: ‘uint16_t’ is defined in header ‘<cstdint>’; did you forget to ‘#include <cstdint>’?
    2 | #include <string>
  +++ |+#include <cstdint>
    3 | 
/home/pc/Avant-Garde/Avant-Garde-1/src/net/ControlSender.h:16:24: error: field ‘dest’ has incomplete type ‘sockaddr_in’
   16 |     struct sockaddr_in dest{};
      |                        ^~~~
/home/pc/Avant-Garde/Avant-Garde-1/src/net/ControlSender.h:16:12: note: forward declaration of ‘struct sockaddr_in’
   16 |     struct sockaddr_in dest{};
      |            ^~~~~~~~~~~
/home/pc/Avant-Garde/Avant-Garde-1/src/net/ControlSender.cpp:12:6: error: no declaration matches ‘bool ControlSender::start(const std::string&, uint16_t)’
   12 | bool ControlSender::start(const std::string &h, uint16_t p){
      |      ^~~~~~~~~~~~~
/home/pc/Avant-Garde/Avant-Garde-1/src/net/ControlSender.h:8:10: note: candidate is: ‘bool ControlSender::start(const std::string&, int)’
    8 |     bool start(const std::string &host, uint16_t port);
      |          ^~~~~
/home/pc/Avant-Garde/Avant-Garde-1/src/net/ControlSender.h:4:7: note: ‘class ControlSender’ defined here
    4 | class ControlSender {
      |       ^~~~~~~~~~~~~
/home/pc/Avant-Garde/Avant-Garde-1/src/net/ControlSender.cpp: In member function ‘void ControlSender::sendReticle(float, float, int)’:
/home/pc/Avant-Garde/Avant-Garde-1/src/net/ControlSender.cpp:31:5: warning: this ‘if’ clause does not guard... [-Wmisleading-indentation]
   31 |     if (nx < 0.0f) nx = 0.5f; if (ny < 0.0f) ny = 0.5f;
      |     ^~
/home/pc/Avant-Garde/Avant-Garde-1/src/net/ControlSender.cpp:31:31: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
   31 |     if (nx < 0.0f) nx = 0.5f; if (ny < 0.0f) ny = 0.5f;
      |                               ^~
gmake[2]: *** [CMakeFiles/blacknode.dir/build.make:202: CMakeFiles/blacknode.dir/src/net/ControlSender.cpp.o] Error 1
gmake[2]: *** Waiting for unfinished jobs....
/home/pc/Avant-Garde/Avant-Garde-1/src/ui/HUD.cpp: In member function ‘void HUD::render()’:
/home/pc/Avant-Garde/Avant-Garde-1/src/ui/HUD.cpp:38:14: error: ‘vector’ is not a member of ‘std’
   38 |         std::vector<float> verts; verts.reserve(segs*2);
      |              ^~~~~~
/home/pc/Avant-Garde/Avant-Garde-1/src/ui/HUD.cpp:5:1: note: ‘std::vector’ is defined in header ‘<vector>’; did you forget to ‘#include <vector>’?
    4 | #include <iostream>
  +++ |+#include <vector>
    5 | 
/home/pc/Avant-Garde/Avant-Garde-1/src/ui/HUD.cpp:38:21: error: expected primary-expression before ‘float’
   38 |         std::vector<float> verts; verts.reserve(segs*2);
      |                     ^~~~~
/home/pc/Avant-Garde/Avant-Garde-1/src/ui/HUD.cpp:38:35: error: ‘verts’ was not declared in this scope
   38 |         std::vector<float> verts; verts.reserve(segs*2);
      |                                   ^~~~~
gmake[2]: *** [CMakeFiles/blacknode.dir/build.make:300: CMakeFiles/blacknode.dir/src/ui/HUD.cpp.o] Error 1
/home/pc/Avant-Garde/Avant-Garde-1/src/Network/UdpReceiver.cpp: In constructor ‘net::UdpReceiver::UdpReceiver(FrameCallback)’:
/home/pc/Avant-Garde/Avant-Garde-1/src/Network/UdpReceiver.cpp:82:19: warning: ‘net::UdpReceiver::cb’ will be initialized after [-Wreorder]
   82 |     FrameCallback cb;
      |                   ^~
/home/pc/Avant-Garde/Avant-Garde-1/src/Network/UdpReceiver.cpp:79:23: warning:   ‘std::atomic<bool> net::UdpReceiver::running’ [-Wreorder]
   79 |     std::atomic<bool> running;
      |                       ^~~~~~~
/home/pc/Avant-Garde/Avant-Garde-1/src/Network/UdpReceiver.cpp:36:5: warning:   when initialized here [-Wreorder]
   36 |     UdpReceiver(FrameCallback cb): cb(cb), running(false) {}
      |     ^~~~~~~~~~~
/home/pc/Avant-Garde/Avant-Garde-1/src/Network/UdpReceiver.cpp: In member function ‘void net::UdpReceiver::processVideoPacket(const uint8_t*, size_t)’:
/home/pc/Avant-Garde/Avant-Garde-1/src/Network/UdpReceiver.cpp:122:18: warning: unused variable ‘magic’ [-Wunused-variable]
  122 |         uint32_t magic = be32(data);
      |                  ^~~~~
gmake[1]: *** [CMakeFiles/Makefile2:238: CMakeFiles/blacknode.dir/all] Error 2
gmake: *** [Makefile:156: all] Error 2
